--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "loopback-component-storage-mongo": "^1.5.1",
     "loopback-component-storage-mongo-gridfs": "^1.3.2",
     "loopback-connector-mongodb": "^4.2.0",
+    "mongodb": "^3.5.8",
     "mongoose": "^5.9.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0"
